--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/country-flag-icons": "^1.2.2",
+    "@types/i18next": "^13.0.0",
+    "@types/react-i18next": "^8.1.0",
     "aos": "^2.3.4",
+    "country-flag-icons": "^1.5.13",
+    "i18next": "^23.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.0.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3"
   },
