--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "esModuleInterop": true,
+    "include": ["src/**/*"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -21,5 +23,8 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+
+
 }
+
